config/e2e/nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: e2e-1
    istio.io/dataplane-mode: none
  name: e2e-1-np
  namespace: gateway-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
    - appProtocol: http
      name: mcp
      nodePort: 30472
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    gateway.networking.k8s.io/gateway-name: e2e-1
  sessionAffinity: None
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: e2e-2
    istio.io/dataplane-mode: none
  name: e2e-2-np
  namespace: gateway-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
    - appProtocol: http
      name: mcp
      nodePort: 30471
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    gateway.networking.k8s.io/gateway-name: e2e-2
  sessionAffinity: None
  type: NodePort
---
# NodePort for shared-gateway (team-a)
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: shared-gateway
    istio.io/dataplane-mode: none
  name: shared-gateway-team-a-np
  namespace: gateway-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
    - appProtocol: http
      name: team-a-mcp
      nodePort: 30473
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    gateway.networking.k8s.io/gateway-name: shared-gateway
  sessionAffinity: None
  type: NodePort
---
# NodePort for shared-gateway (team-b)
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: shared-gateway
    istio.io/dataplane-mode: none
  name: shared-gateway-team-b-np
  namespace: gateway-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
    - appProtocol: http
      name: team-b-mcp
      nodePort: 30474
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    gateway.networking.k8s.io/gateway-name: shared-gateway
  sessionAffinity: None
  type: NodePort
